# MarketData

./: .gitignore  Cargo.toml  PR_NOTES.md  README.md  marketdata_probe_rerun_results.json  marketdata_probe_rerun_summary.csv
.github/workflows/: ci.yml
benches/: etl_bench.rs
config/: regex_rules.yaml  source_metadata.yaml
configs/: sample_symbols.json
docs/: STATUS.md  algotradeplan_integration.md  cli_usage.md  data_layer_status_gap_analysis.md  new_project_onboarding.md  selection_explain.md  smoke_tests.md  source_mapping.md  standalone_data_layer_migration_plan.md  upgrade_notes.md
integration/algotradeplan/: datahub_bridge_example.py  hub_bridge.py  migration_cutover.md  pyproject_snippet.toml
scripts/: precommit_live_check.sh  run_marketdata_ingest.sh  setup_external_tools.sh
src/: cache.rs  candidates.rs  capabilities.rs  contracts.rs  etl.rs  heuristics.rs  hub.rs  lib.rs  matcher.rs  normalize.rs  provenance.rs  quality.rs  query.rs  source_health.rs  source_registry.rs  source_selector.rs  storage.rs  storage_s3.rs  stream_consumer.rs  streaming.rs
src/providers/: btcturk.rs  dovizcom.rs  errors.rs  fintables.rs  kap.rs  mod.rs  paratic.rs  tefas.rs  tradingview.rs  tradingview_ws.rs  yahoo.rs  yahoo_async.rs
tests/: asset_class_enforcement_tests.rs  bridge_cli_tests.rs  candidates_tests.rs  data_hub_tests.rs  providers_btcturk_test.rs  providers_dovizcom_test.rs  providers_fintables_test.rs  providers_kap_test.rs  providers_paratic_test.rs  providers_registry_test.rs  providers_tefas_test.rs  providers_tradingview_test.rs  providers_yahoo_test.rs  selection_integration_tests.rs  source_health_tests.rs  source_registry_tests.rs  source_selector_rules_tests.rs  source_selector_tests.rs
tests/fixtures/: btcturk_ticker.json  fintables_example.html  kap_disclosures.json  yahoo_chart.json  yahoo_quote.json
