[package]
name = "market_data"
version = "0.1.0"
edition = "2024"
description = "Rust-native market data ingestion and normalization layer"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
