[package]
name = "market_data"
version = "0.1.0"
edition = "2024"
description = "Rust-native market data ingestion and normalization layer"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tefas = { package = "lib", path = "external_tools/tefas-cli/crates/lib", features = ["wreq-backend", "tefas-compat"], optional = true }
once_cell = "1.21"
regex = "1"

# Streaming / websocket POC dependencies
tokio-tungstenite = "0.20"
futures = "0.3"
rand = "0.8"

# Optional runtime metrics
metrics = { version = "0.18", optional = true }
reqwest_async = { package = "reqwest", version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
httpmock = "0.6"

# Benchmarking and developer tools
criterion = "0.4"
rayon = { version = "1.8", optional = true }

[features]
default = []
# Optional features for progressive improvements
metrics = []
async_providers = []
s3 = []
tefas = ["dep:tefas"]
parallel = ["rayon"]
